--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,26 +1,32 @@
 {
-  "name": "Python 3",
-  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "name": "Marketing Analytics App",
   "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
+
   "customizations": {
     "codespaces": {
       "openFiles": [
         "README.md",
-        "app.py"
+        "interface.py"
       ]
     },
     "vscode": {
-      "settings": {},
       "extensions": [
         "ms-python.python",
         "ms-python.vscode-pylance"
       ]
     }
   },
-  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit; echo '✅ Packages installed and Requirements met'",
+
+  // This command runs our setup script after the container is created.
+  // This is much cleaner than a long, single-line command.
+  "postCreateCommand": ".devcontainer/setup.sh",
+
+  // Runs after you connect, starting the Streamlit app automatically.
   "postAttachCommand": {
     "server": "streamlit run app.py --server.enableCORS false --server.enableXsrfProtection false"
   },
+
+  // Configures the port forwarding for the Streamlit app.
   "portsAttributes": {
     "8501": {
       "label": "Application",
